<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/black_5"
    app:cardCornerRadius="12dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:contentDescription="@string/close_search"
            android:paddingStart="20dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="@id/acSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/acSearch"
            app:tint="@color/text_color_large" />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/acSearch"
            style="@style/AutoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:completionThreshold="0"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="textCapWords"
            android:maxLines="1"
            app:layout_constraintEnd_toStartOf="@id/rlIcons"
            app:layout_constraintStart_toEndOf="@id/ivClose"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/rlIcons"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@id/acSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/acSearch">

            <ImageView
                android:id="@+id/ivClear"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/clear_search"
                android:src="@drawable/ic_close"
                android:visibility="gone"
                app:tint="@color/text_color_large" />

            <ImageView
                android:id="@+id/ivGetLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:contentDescription="@string/clear_search"
                android:src="@drawable/ic_location"
                android:visibility="visible"
                app:tint="@color/text_color_large" />
        </RelativeLayout>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@color/black_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/acSearch" />

        <RadioGroup
            android:id="@+id/rgSearchType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator">

            <RadioButton
                android:id="@+id/rbCity"
                style="@style/SmallTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/city_name" />

            <RadioButton
                android:id="@+id/rbLatLon"
                style="@style/SmallTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lat_lon" />

            <RadioButton
                android:id="@+id/rbZip"
                style="@style/SmallTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zip_code" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>