<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/tvDayTime"
        style="@style/MediumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/ivIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Sunday @ 18:00" />

    <com.forecasty.view.common.WeatherIconView
        android:id="@+id/ivIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/weather_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        style="@style/SmallTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/text_color_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDayTime"
        tools:text="Sept 30" />

    <LinearLayout
        android:id="@+id/llTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/ivIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTempMax"
            style="@style/LargeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="30°C" />

        <View
            android:id="@+id/sepTemp"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/text_color_very_small" />

        <TextView
            android:id="@+id/tvTempMin"
            style="@style/MediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="23°C" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivWind"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/wind_icon"
        android:src="@drawable/ic_wind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDate" />

    <TextView
        android:id="@+id/tvWind"
        style="@style/SmallTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/text_color_medium"
        app:layout_constraintBottom_toBottomOf="@id/ivWind"
        app:layout_constraintStart_toEndOf="@id/ivWind"
        app:layout_constraintTop_toTopOf="@id/ivWind"
        tools:text="25 miles/hr" />

    <ImageView
        android:id="@+id/ivHumidity"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/humidity_icon"
        android:src="@drawable/ic_humidity"
        app:layout_constraintBottom_toBottomOf="@id/tvHumidity"
        app:layout_constraintEnd_toStartOf="@id/tvHumidity"
        app:layout_constraintTop_toTopOf="@id/tvHumidity" />

    <TextView
        android:id="@+id/tvHumidity"
        style="@style/SmallTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color_medium"
        app:layout_constraintBottom_toBottomOf="@id/ivWind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivWind"
        tools:text="25%" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:background="@color/text_color_very_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivWind"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>