<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible">

    <TextView
        android:id="@+id/tvDesc"
        style="@style/LargeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".4"
        tools:text="scattered clouds" />

    <com.forecasty.view.common.WeatherIconView
        android:id="@+id/ivIcon"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLocation"
        style="@style/MediumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivIcon"
        tools:text="Moscow, Russia" />

    <TextView
        android:id="@+id/tvTemp"
        style="@style/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="54sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLocation"
        tools:text="39" />

    <TextView
        android:id="@+id/tvTempUnit"
        style="@style/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="54sp"
        app:layout_constraintStart_toEndOf="@id/tvTemp"
        app:layout_constraintTop_toBottomOf="@id/tvLocation"
        tools:text="°C" />

    <TextView
        android:id="@+id/tvFeelsLike"
        style="@style/SmallTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTemp"
        tools:text="Feels like 32" />

    <TextView
        android:id="@+id/tvFeelsLikeUnit"
        style="@style/SmallTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/tvFeelsLike"
        app:layout_constraintTop_toBottomOf="@id/tvTemp"
        tools:text="°C" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <TextView
        android:id="@+id/tvDayOfWeek"
        style="@style/MediumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/tvLocation"
        tools:text="Saturday" />

    <TextView
        android:id="@+id/tvDay"
        style="@style/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/tvDayOfWeek"
        tools:text="3rd" />

    <TextView
        android:id="@+id/tvMonth"
        style="@style/MediumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/tvDay"
        tools:text="Aug" />

    <TextView
        android:id="@+id/tvNextDays"
        style="@style/SmallTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/next_days"
        android:textColor="@color/button_bg_color"
        app:drawableEndCompat="@drawable/ic_arrow_right_small"
        app:drawableTint="@color/button_bg_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/tvMonth" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/black_5"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFeelsLike"
        app:layout_constraintVertical_bias="0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/inner_guideline5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />

            <TextView
                android:id="@+id/tvWind"
                style="@style/SmallTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:gravity="center_horizontal"
                android:text="@string/wind"
                app:drawableTopCompat="@drawable/ic_wind"
                app:layout_constraintEnd_toEndOf="@id/inner_guideline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@id/inner_guideline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWind">

                <TextView
                    android:id="@+id/tvWindValue"
                    style="@style/MediumTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    tools:text="15" />

                <TextView
                    android:id="@+id/tvWindUnit"
                    style="@style/MediumTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:gravity="center_horizontal"
                    tools:text="km/h" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvHumidity"
                style="@style/SmallTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:gravity="center_horizontal"
                android:text="@string/humidity"
                app:drawableTopCompat="@drawable/ic_humidity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/inner_guideline5"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHumidityValue"
                style="@style/MediumTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/inner_guideline5"
                app:layout_constraintTop_toBottomOf="@id/tvHumidity"
                tools:text="55%" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>